test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Public_Key/POST_api_atlas_v2_groups_b0123456789abcdef012345b_databaseUsers_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Mon, 02 Mar 2026 03:16:59 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="38nAR4gef9db+pu7qj+qTp84Ubu5vAHS", algorithm=MD5, qop="auth", stale=false

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}